--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -1,13 +1,17 @@
 .List {
   width: 97%;
-
-  border: 1px solid #404040;
   color: #d9d9d9;
   padding-inline-start: 0;
   padding: 5px 10px;
+  margin: 10px 0px;
   ul {
     padding-inline-start: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
   }
+}
+.List_additional {
+  border: 1px solid #404040;
 }
 .item {
   cursor: pointer;
@@ -15,13 +19,22 @@
   border: 1px solid #949494;
   background-color: #080c2c;
   list-style: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
   &:hover {
     opacity: 0.9;
   }
 }
 .error {
+  color: #760f0f;
   color: #a51313;
 }
 .warning {
   color: rgb(140, 140, 71);
+}
+.header {
+  margin: 0;
+}
+.count {
+  color: #fa9b7b;
 }
