--- a/src/components/Stats/Stats.module.scss
+++ b/src/components/Stats/Stats.module.scss
@@ -1,8 +1,10 @@
 .Stats {
   width: 100%;
   height: 100%;
+  padding: 10px;
   overflow-y: scroll;
   overflow-x: hidden;
+  
 
   &::-webkit-scrollbar {
     width: 7px;
@@ -28,4 +30,7 @@
 }
 .half-w{
   width: 50%;
+}
+.quarterWidth{
+width: 20%;
 }
