add dynamic lang search, add button for regexp description

--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -1,7 +1,7 @@
 .List {
   color: #d9d9d9;
   padding-inline-start: 0;
-  padding: 5px 10px;
+  padding: 5px;
   margin: 10px 0px;
   ul {
     padding-inline-start: 0;
