--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -3,6 +3,7 @@
   padding-inline-start: 0;
   padding: 5px;
   margin: 10px 0px;
+  overflow: auto;
   ul {
     padding-inline-start: 0;
     margin-block-start: 0;
@@ -20,6 +21,7 @@
   list-style: none;
   margin-block-start: 0;
   margin-block-end: 0;
+  word-wrap: break-word;
   &:hover {
     opacity: 0.9;
   }
