add htmlList with tabs

--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -26,6 +26,8 @@
     opacity: 0.9;
   }
 }
+
+
 .error {
   color: #760f0f;
   color: #a51313;
@@ -38,4 +40,7 @@
 }
 .count {
   color: #fa9b7b;
+}
+.active{
+  background-color: #404040;
 }
