--- a/src/pages/Editor/Editor.module.scss
+++ b/src/pages/Editor/Editor.module.scss
@@ -7,6 +7,7 @@
 .editorContainer {
   width: 55%;
 }
+
 .frameContainer {
   width: 45%;
   display: flex;
@@ -14,7 +15,13 @@
   flex-direction: column;
   padding: 2px 2px;
 }
+
 .CodeEditor {
   width: 100%;
   height: 100%;
+}
+
+.buttonContainer {
+  padding: 0px 6px;
+  display: inline-block;
 }
