--- a/src/components/Frame/Frame.module.scss
+++ b/src/components/Frame/Frame.module.scss
@@ -61,4 +61,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 12px;
+  font-size: smaller;
+}
+
+.sizeControlsContainer {
+  display: flex;
+  flex-direction: column;
+
 }
