--- a/src/components/Images/Images.module.scss
+++ b/src/components/Images/Images.module.scss
@@ -1,11 +1,15 @@
 .ImagesContainer {
     width: 100%;
-    overflow: auto;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     ul {
         list-style: none;
         padding: 0;
         margin: 0 auto;
+        width: 100%;
     }
 
     li {
@@ -14,13 +18,24 @@
         border: 1px solid;
         text-align: center;
 
+        margin: 5px auto 0;
+
         img {
             border: 1px solid;
             max-width: 70%;
+            margin: 0 auto;
         }
 
         &:hover {
             opacity: 0.6;
         }
     }
+}
+
+.url {
+    word-wrap: break-word;
+}
+
+.img {
+    display: block;
 }
