--- a/src/components/Stats/Stats.module.scss
+++ b/src/components/Stats/Stats.module.scss
@@ -1,28 +1,12 @@
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins';
+
 .Stats {
-  width: 100%;
-  height: 100%;
-  padding: 10px;
+  @include container-base;
+  padding: $spacing-md;
   overflow-y: scroll;
   overflow-x: hidden;
-
-  &::-webkit-scrollbar {
-    width: 7px;
-  }
-
-  /* Track */
-  &::-webkit-scrollbar-track {
-    background: #ababab57;
-  }
-
-  /* Handle */
-  &::-webkit-scrollbar-thumb {
-    background: #252525df;
-  }
-
-  /* Handle on hover */
-  &::-webkit-scrollbar-thumb:hover {
-    background: #000000;
-  }
+  @include custom-scrollbar;
 }
 
 .header {
@@ -38,15 +22,13 @@
 }
 
 .flexContainer {
-  display: flex;
+  @include flex-center;
   width: 100%;
-  gap: 10px;
-  justify-content: center;
+  gap: $spacing-md;
 }
 
 .flex {
-
-  display: flex
+  display: flex;
 }
 
 .flexGrow {
