--- a/src/pages/Editor/Editor.module.scss
+++ b/src/pages/Editor/Editor.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @import '../../styles/abstracts/variables';
 @import '../../styles/abstracts/mixins';
 
@@ -65,7 +66,7 @@
 }
 
 .tab:hover {
-  color: darken($light-color, 20%);
+  color: color.adjust($light-color, $lightness: -20%);
 }
 
 /* Активный таб */
@@ -128,7 +129,8 @@
 
 .buttonGroup {
   @include flex-center;
-  width: 55%;
+  width: 65%;
+  justify-content: start;
 }
 
 @keyframes fade-change {
@@ -141,7 +143,7 @@
   }
 }
 
-.frameContainer>* {
+.frameContainer > * {
   animation: fade-change 0.1s ease-out;
 }
 
