--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 .btn {
   display: inline-flex;
   align-items: center;
@@ -23,7 +24,7 @@
     color: white;
 
     &:hover:not(:disabled) {
-      background-color: darken($primary-color, 10%);
+      background-color: color.adjust($primary-color, $lightness: - 10%);
     }
   }
 
@@ -32,7 +33,7 @@
     color: white;
 
     &:hover:not(:disabled) {
-      background-color: darken($secondary-color, 10%);
+      background-color: color.adjust($secondary-color, $lightness: -10%);
     }
   }
 
