--- a/src/pages/Editor/Editor.module.scss
+++ b/src/pages/Editor/Editor.module.scss
@@ -2,10 +2,15 @@
 @import '../../styles/abstracts/variables';
 @import '../../styles/abstracts/mixins';
 
+.EditorPage {
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
   width: 100%;
   display: flex;
-  height: 95vh;
+  height: 94.5vh;
   gap: 10px;
 }
 
