--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,9 @@
 @import './styles/main.scss';
 
-body {
-  background-color: #14141c;
-  color: #fff;
-}
-
 #root {
   width: 100%;
   margin: 0 auto;
   padding: 0;
   max-height: 100vh;
-}
-
-.errorBackground {
-  background-color: rgba(255, 0, 0, 0.238);
-}
-
-.errorDecoration {
-  text-decoration: underline 1px black;
-}
-
-.warningBackground {
-  background-color: rgba(255, 255, 0, 0.101);
-}
-select {
-  border-radius: 10px;
+  scroll-behavior: smooth;
 }
