--- a/src/components/common/Button.module.scss
+++ b/src/components/common/Button.module.scss
@@ -35,7 +35,7 @@
   }
 
   &.active {
-    background-color: lighten($dark-color, 5%);
+    background-color: $button-active-background-color;
   }
 
   &:active {
