--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,15 +1,30 @@
 // Colors
-$primary-color: #3e3e3e;
-$secondary-color: #787c7f;
-$success-color: #28a745;
-$danger-color: #dc3545;
-$warning-color: #ffc107;
-$info-color: #17a2b8;
+$primary-color: #282c34; // Dark background
+$secondary-color: #abb2bf; // Lighter text color
+$accent-color: #61afef; // Example accent color
+$success-color: #98c379;
+$danger-color: #e06c75;
+$warning-color: #d19a66;
+$info-color: #56b6c2;
 $light-color: #f8f9fa;
 $dark-color: #222;
 
+$error-background-color: rgba(255, 0, 0, 0.238);
+$warning-background-color: rgba(255, 255, 0, 0.101);
+
+$button-active-background-color: lighten($dark-color, 5%);
+
 // Typography
-$font-family-base: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+$font-family-base:
+  'Inter',
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  Roboto,
+  Oxygen,
+  Ubuntu,
+  Cantarell,
+  sans-serif;
 $font-size-base: 16px;
 $line-height-base: 1.5;
 
@@ -19,7 +34,7 @@ $spacing-xs: $spacing-unit * 0.5; // 4px
 $spacing-sm: $spacing-unit; // 8px
 $spacing-md: $spacing-unit * 2; // 16px
 $spacing-lg: $spacing-unit * 3; // 24px
-$spacing-xl: $spacing-unit * 4; // 32px
+$spacing-xl: $spacing-unit * 4; // 32px;
 
 // Breakpoints
 $breakpoint-sm: 576px;
