--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 // Base
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/_base.scss';
 
 // Components
 @import 'components/buttons';
