--- a/src/components/Images/Images.module.scss
+++ b/src/components/Images/Images.module.scss
@@ -1,42 +1,43 @@
-@import '../../styles/abstracts/variables';
-@import '../../styles/abstracts/mixins';
+@use '../../styles/main.scss' as *;
+@use '../../styles/abstracts/variables' as *;
+@use '../../styles/abstracts/mixins' as *;
 
 .ImagesContainer {
+  width: 100%;
+  overflow-y: auto;
+  @include flex-column;
+  align-items: center;
+  @include custom-scrollbar;
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
     width: 100%;
-    overflow-y: auto;
-    @include flex-column;
-    align-items: center;
-    @include custom-scrollbar;
+  }
 
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 0 auto;
-        width: 100%;
+  li {
+    @include button-base;
+    text-align: center;
+    margin: $spacing-sm auto 0;
+
+    img {
+      @include bordered;
+      max-width: 70%;
+      margin: 0 auto;
     }
 
-    li {
-        @include button-base;
-        text-align: center;
-        margin: $spacing-sm auto 0;
-
-        img {
-            @include bordered;
-            max-width: 70%;
-            margin: 0 auto;
-        }
-
-        &:hover {
-            opacity: 0.6;
-            @include transition;
-        }
+    &:hover {
+      opacity: 0.6;
+      @include transition;
     }
+  }
 }
 
 .url {
-    @include text-truncate;
+  @include text-truncate;
 }
 
 .img {
-    display: block;
+  display: block;
 }
