--- a/src/components/common/Button.module.scss
+++ b/src/components/common/Button.module.scss
@@ -1,7 +1,7 @@
 @use 'sass:color';
-
-@import '../../styles/abstracts/variables';
-@import '../../styles/abstracts/mixins';
+@use '../../styles/main.scss' as *;
+@use '../../styles/abstracts/variables' as *;
+@use '../../styles/abstracts/mixins' as *;
 
 .button {
   @include button-base;
