--- a/src/components/common/Input.module.scss
+++ b/src/components/common/Input.module.scss
@@ -1,39 +1,40 @@
-@import '../../styles/abstracts/variables';
-@import '../../styles/abstracts/mixins';
+@use '../../styles/main.scss' as *;
+@use '../../styles/abstracts/variables' as *;
+@use '../../styles/abstracts/mixins' as *;
 
 .inputWrapper {
-    @include flex-column;
-    gap: $spacing-xs;
-    width: 100%;
+  @include flex-column;
+  gap: $spacing-xs;
+  width: 100%;
 }
 
 .label {
-    color: $light-color;
-    font-size: 0.9em;
+  color: $light-color;
+  font-size: 0.9em;
 }
 
 .input {
-    @include input-base;
-    color: $light-color;
-    background: rgba($dark-color, 0.2);
-    
-    &.error {
-        border-color: $danger-color;
-        &:focus {
-            box-shadow: 0 0 0 3px rgba($danger-color, 0.3);
-        }
-    }
+  @include input-base;
+  color: $light-color;
+  background: rgba($dark-color, 0.2);
 
-    &[type="number"] {
-        &::-webkit-inner-spin-button,
-        &::-webkit-outer-spin-button {
-            opacity: 1;
-            height: 20px;
-        }
+  &.error {
+    border-color: $danger-color;
+    &:focus {
+      box-shadow: 0 0 0 3px rgba($danger-color, 0.3);
     }
+  }
+
+  &[type='number'] {
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      opacity: 1;
+      height: 20px;
+    }
+  }
 }
 
 .errorMessage {
-    color: $danger-color;
-    font-size: 0.8em;
-} 
+  color: $danger-color;
+  font-size: 0.8em;
+}
