--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/variables' as *;
+
 // Modern CSS Reset
 
 // Box sizing
@@ -48,10 +50,6 @@ ol[class] {
   padding: 0;
   margin: 0;
 }
-
-
-
-
 
 // Inherit fonts for inputs and buttons
 input,
