--- a/src/pages/Editor/Editor.module.scss
+++ b/src/pages/Editor/Editor.module.scss
@@ -159,3 +159,28 @@
   padding: $spacing-xs $spacing-sm !important;
   height: 95%;
 }
+
+.resizeHandle {
+  position: relative;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  transition: all 0.1s ease;
+  width: 5px;
+}
+
+.resizeHandle:hover {
+  background-color: rgb(83, 0, 0);
+  transform: scale(1.2);
+}
+
+.resizeinner {
+  z-index: 2;
+  border-top: 8px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 5px solid #e8e8e8;
+  width: 0;
+  height: 0;
+}
